--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                     </div>
 
                     <div class="copyright">
-                        <p style="float: left; margin-left: 5%;">Design By Himanshu Mishra</p>
-                        <p style="float: right; margin-right: 5%;">&copy; copyright2020EzeWev. All rights reserved</p>
+                        <p style="float: left; margin-left: 5%;">Design By Kawsar</p>
+                        <p style="float: right; margin-right: 5%;">Clone By Himanshu Mishra</p>
                     </div>
 
                 </div>
